--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.iprivado</groupId>
-        <artifactId>IPrivado</artifactId>
+        <artifactId>Iprivate</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
