--- a/ms-api-ext/pom.xml
+++ b/ms-api-ext/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.iprivado</groupId>
-        <artifactId>IPrivado</artifactId>
+        <artifactId>Iprivate</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -50,12 +50,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
