--- a/ms-consumer/pom.xml
+++ b/ms-consumer/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.iprivado</groupId>
-        <artifactId>IPrivado</artifactId>
+        <artifactId>Iprivate</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -75,12 +75,6 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.15.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
