--- a/ms-free-area/src/main/resources/application.properties
+++ b/ms-free-area/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ms-free-area
 server.port=${PORT:8002}
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost:3302}/${DB_DATABASE:mysql_free_area}?serverTimezone=America/Argentina/Buenos_Aires
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost:3302}/${DB_DATABASE:mysql-free-area}?serverTimezone=America/Argentina/Buenos_Aires
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:granada290378}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
