--- a/ms-private-area/pom.xml
+++ b/ms-private-area/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.iprivado</groupId>
-        <artifactId>IPrivado</artifactId>
+        <artifactId>Iprivate</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -107,12 +107,6 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-netflix-eureka-client</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-        </dependency>
-
 
     </dependencies>
 
