--- a/ms-private-area/src/main/resources/application.properties
+++ b/ms-private-area/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ms-private-area
 server.port=${PORT:8003}
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost:3303}/${DB_DATABASE:mysql_private_area}?serverTimezone=America/Argentina/Buenos_Aires
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost:3303}/${DB_DATABASE:mysql-private-area}?serverTimezone=America/Argentina/Buenos_Aires
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:granada290378}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
