--- a/ms-producer/pom.xml
+++ b/ms-producer/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.iprivado</groupId>
-		<artifactId>IPrivado</artifactId>
+		<artifactId>Iprivate</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
@@ -32,12 +32,6 @@
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 
 		<dependency>
