--- a/ms-users/pom.xml
+++ b/ms-users/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.iprivado</groupId>
-        <artifactId>IPrivado</artifactId>
+        <artifactId>Iprivate</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -130,7 +130,6 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-netflix-eureka-client</artifactId>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
