--- a/ms-users/src/main/resources/application.properties
+++ b/ms-users/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ms-users
 server.port=${PORT:8001}
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost:3301}/${DB_DATABASE:mysql_users}?serverTimezone=America/Argentina/Buenos_Aires
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost:3301}/${DB_DATABASE:mysql-users}?serverTimezone=America/Argentina/Buenos_Aires
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:granada290378}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
