--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.iprivado</groupId>
-    <artifactId>IPrivado</artifactId>
+    <artifactId>Iprivate</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
@@ -27,7 +27,7 @@
         <module>eureka</module>
         <module>config-server</module>
         <module>ms-auth-server</module>
-
+        <module>ms-resource-server</module>
     </modules>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
